Fix Header width based on scrollbar

--- a/src/App.css
+++ b/src/App.css
@@ -24,7 +24,7 @@ input:-webkit-autofill {
 
 /* Scrollbar */
 ::-webkit-scrollbar{
-    width: 5px;
+    width: 6px;
 }
 
 ::-webkit-scrollbar-track{
